@@ -1,3 +1,4 @@
+5/24/13 add Solute combo box
 5/24/13 port SolutionNode without constructive area geometry
 5/24/13 add "Show Values" check box
 5/24/13 wrote my own CheckBox, because sun.CheckBox isn't usable with Property and is embedded in a control panel
